[package]
name = "versor"
version = "0.1.0"
authors = ["chengluyu <chengluyu@live.cn>"]
edition = "2018"
license = "MIT"
description = "A Rust port of versor in D3.js"
homepage = "https://github.com/chengluyu/versor"
documentation = "https://docs.rs/versor"
repository = "https://github.com/chengluyu/versor"
readme = "README.md"
keywords = ["versor", "globe", "dragging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
